# moov-python-paygate-api-client

./: README.md  pyproject.toml
paygate_api_client/: __init__.py
paygate_api_client/api/configuration/: get_transfer_configuration.py  update_transfer_configuration.py
paygate_api_client/api/monitor/: ping.py
paygate_api_client/api/transfers/: add_transfer.py  delete_transfer_by_id.py  get_transfer_by_id.py  get_transfers.py
paygate_api_client/api/validation/: get_account_micro_deposits.py  get_micro_deposits.py  initiate_micro_deposits.py
paygate_api_client/models/: __init__.py  amount.py  create_micro_deposits.py  create_transfer.py  destination.py  micro_deposits.py  organization_configuration.py  return_code.py  source.py  transfer.py  transfer_status.py  transfers.py
